# MetaTrader5-GoonBot

./: .gitignore  backtester.py  bot_types.py  candle_patterns.py  config.py  config_validator.py  config_watcher.py  correlation.py  dashboard.py  equity_tracker.py  health.py  indicators.py  logger.py  main.py  mt5_bridge.py  mypy.ini  news_filter.py  notifier.py  position_manager.py  pyproject.toml  requirements.txt  risk_math.py  run_bot.bat  sessions.py  signals.py  state.py
tests/: conftest.py  test_candle_patterns.py  test_config_validator.py  test_equity_tracker.py  test_indicators.py  test_logger.py  test_main.py  test_news_filter.py  test_position_manager.py  test_risk_math.py  test_sessions.py  test_signals.py
