[project]
name = "mt5-rule-bot"
version = "1.0.0"
description = "Zero-cost, 24/7 autonomous forex trading bot for MetaTrader 5"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
